entity_macros/tests/ui/derive/ent/too-many-attr-inside-ent-attr.stderr
error: Duplicate field `created`
  --> $DIR/too-many-attr-inside-ent-attr.rs:11:20
   |
11 |     #[ent(created, created)]
   |                    ^^^^^^^
